# weac

./: .bumpversion.cfg  .coverage  .cursorignore  .gitignore  .gitmodules  .pylintrc  1_GIc_parameterization.py  1_eval_pst.py  1_parameteriz_pst_results.py  CITATION.cff  LICENSE  MANIFEST.in  README.md  TODO.md  _Cloud_03_avalanche_02_weac_weac_pst_cut_right.py1.stats  _Cloud_03_avalanche_02_weac_weac_weac_eigensystem.py1.stats  _Cloud_03_avalanche_02_weac_weac_weac_layered.py1.stats  _Cloud_03_avalanche_02_weac_weac_weac_mixins.py1.stats  _Cloud_03_avalanche_02_weac_weac_weac_plot.py1.stats  caaml_to_weac_simulation.py  convert_rho.m  crit_func_G.m  crit_func_s.m  demo_weac2.ipynb  environment.yml  eval_crown_flank_dataset.ipynb  eval_distribution.ipynb  eval_pst.ipynb  eval_weac_over_layers.ipynb  ffm_find_failure_load.m  ffm_geometry_and_loading.m  ffm_ierr.m  ffm_init.m  fprintf_verbosity.m  genindex.html  get_verbosity.m  index.html  main.m  main.py  main_weac2 copy 2.py  (+47 more)
.github/workflows/: ci-status.yml  docs.yml  format.yml  pylint.yml  release.yml  tests.yml
_modules/: index.html
_modules/weac/: eigensystem.html  plot.html
_sources/: weac.components.scenario_config.rst.txt  weac.constants.rst.txt  weac.core.system_model.rst.txt  weac.core.unknown_constants_solver.rst.txt  weac.inverse.rst.txt  weac.mixins.rst.txt  weac.rst.txt  weac.tools.rst.txt
data/: Geldsetzer_Daten.csv  present  reference
demo/: demo.ipynb  demo_snowpilot_parser.ipynb  generalized_backend_documentation.ipynb
docs/: eigensystem.html  eigensystem.md  fracture.html  fracture.md  genindex.html  index.html  index.md  inverse.html  inverse.md  layered.html  layered.md  mixins.html  mixins.md  modules.html  objects.inv  plot.html  plot.md  py-modindex.html  search.html  searchindex.js  tools.html  tools.md  weac.analysis.analyzer.html  weac.analysis.criteria_evaluator.html  weac.analysis.html  weac.analysis.plotter.html  weac.components.config.html  weac.components.criteria_config.html  weac.components.html  weac.components.layer.html  weac.components.model_input.html  weac.components.presets.html  weac.components.scenario_config.html  weac.components.segment.html  weac.constants.html  weac.core.eigensystem.html  weac.core.field_quantities.html  weac.core.generalized_eigensystem.html  weac.core.generalized_field_quantities.html  weac.core.generalized_unknown_constants_solver.html  (+19 more)
docs/_modules/: index.html
docs/_sources/: weac.components.presets.rst.txt  weac.components.rst.txt  weac.core.generalized_eigensystem.rst.txt  weac.core.generalized_field_quantities.rst.txt  weac.core.generalized_unknown_constants_solver.rst.txt  weac.core.rst.txt  weac.eigensystem.rst.txt  weac.plot.rst.txt  weac.rst.txt
docs/_static/: pygments.css
docs/sphinx/: Makefile  conf.py  index.rst  modules.rst  weac.analysis.analyzer.rst  weac.analysis.criteria_evaluator.rst  weac.analysis.rst  weac.components.config.rst  weac.components.layer.rst  weac.components.rst  weac.components.segment.rst  weac.constants.rst  weac.core.eigensystem.rst  weac.core.field_quantities.rst  weac.core.rst  weac.core.scenario.rst  weac.core.slab.rst  weac.eigensystem.rst  weac.inverse.rst  weac.layered.rst  weac.logging_config.rst  weac.plot.rst  weac.rst  weac.utils.geldsetzer.rst  weac.utils.misc.rst  weac.utils.rst  weac.utils.snowpilot_parser.rst
docs/weac/: eigensystem.html  index.html  inverse.html  layered.html  mixins.html  plot.html  tools.html
examples/: criterion_check.py
misc/: Cairn Gully-10-Jun.caaml  process_snowpits_for_psts.py  snowpilot_querier.py  snowpylot_trial.py  test_snowplot_parser.py
old_tests/: test_eigensystem.py  test_layered.py  test_mixins.py  test_plot.py  test_tools.py
old_weac/: __init__.py  eigensystem.py  inverse.py  layered.py  plot.py  tools.py
old_weac/mixins/: analysis_mixin.py  field_quantities_mixin.py  output_mixin.py  slab_contact_mixin.py  solution_mixin.py
src/weac/: __init__.py  logging_config.py
st_user/: app.py
st_user/utils/: plotting.py
streamlit_app/: 1_Slab_Definition.py  app.py  main.py
streamlit_app/pages/: 1_Slab_Definition.py  2_Scenario_Definition.py  3_Analysis.py
streamlit_app/utils/: calculation.py  plotting.py
symbolic/combined/: beam_M_eul_crack.m  beam_M_eul_nocrack.m  beam_M_timo_cmplx_crack.m  beam_M_timo_cmplx_pst.m  beam_M_timo_real_crack.m  beam_M_timo_real_pst.m  beam_n_eul_nocrack.m  beam_n_eul_pst.m  beam_n_timo_cmplx_crack.m  beam_n_timo_real_nocrack.m  beam_w_timo_cmplx_nocrack.m  beam_w_timo_cmplx_pst.m  beam_w_timo_real_nocrack.m  beam_w_timo_real_pst.m  rod_C_nocrack.m  rod_d_nocrack.m  rod_d_pst.m  rod_u_nocrack.m
test/: testing_stuff.py
tests/: __init__.py  benchmark_clean_performance.py  profile_performance.py  run_tests.py  test_comparison_benchmark.py  test_comparison_performance.py  test_comparison_results.py  test_eigensystem.py  test_layered.py  test_mixins.py  test_plot.py  test_regression_simulation.py  test_tools.py
tests/.materials/: test_snowpit1.xml  test_snowpit2.xml
tests/analysis/: test_analyzer.py  test_criteria_evaluator.py  test_slab_tensile_comparisons.py
tests/components/: test_configs.py  test_layer.py
tests/core/: test_eigensystem.py  test_field_quantities.py  test_scenario.py  test_slab.py  test_slab_touchdown.py  test_system_model.py
tests/utils/: json_helpers.py  test_json_helpers.py  test_misc.py  test_snowpilot_parser.py  (+1 more)
tests_2/: README_test_suite.md  benchmark_clean_performance.py  profile_performance.py  run_tests.py  test_analysis_criteria_evaluator.py  test_components_configs.py  test_components_layer.py  test_core_eigensystem.py  test_core_field_quantities.py  test_core_slab.py  test_integration.py  test_regression_simulation.py  test_system_model.py  test_system_model_caching.py  test_utils.py
weac/: __init__.py  constants.py  criterion_check.py  eigensystem.py  inverse.py  layered.py  mixins.py  plot.py  requirements.txt  tools.py  weac.py
weac.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
weac/core/: slab.py  (+7 more)
weac_2/: constants.py  logging_config.py  utils.py
(+253 files in other folders)
