[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weac"
version = "2.6.1"
authors = [{ name = "2phi GbR", email = "mail@2phi.de" }]
description = "Weak layer anticrack nucleation model"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib>=3.9.1",
    "numpy>=2.0.1",
    "scipy>=1.14.0",
    "pydantic>=2.11.7",
    "snowpylot>=1.1.3",
]

[project.urls]
Homepage = "https://github.com/2phi/weac"
Demo = "https://github.com/2phi/weac/blob/main/demo/demo.ipynb"
Documentation = "https://2phi.github.io/weac"
"Issues and feature requests" = "https://github.com/2phi/weac/issues"

[project.optional-dependencies]
interactive = [
    "jupyter",
    "ipython>=8.37.0",
    "ipykernel>=6.30.1",
    "jupyter_client>=8.6.3",
    "jupyter_core>=5.8.1",
    "matplotlib-inline>=0.1.7",
    "nest-asyncio>=1.6.0",
    "pyzmq>=27.0.1",
    "tornado>=6.5.2",
    "traitlets>=5.14.3",
]
docs = ["sphinx", "sphinxawesome-theme"]
dev = [
    # Notebook execution (to run demo.ipynb non-interactively)
    "nbclient>=0.10.0",
    "nbconvert>=7.16.4",
    "nbformat>=5.10.0",

    # Jupyter stack for interactive development
    "jupyter",
    "ipython>=8.37.0",
    "ipykernel>=6.30.1",
    "jupyter_client>=8.6.3",
    "jupyter_core>=5.8.1",
    "matplotlib-inline>=0.1.7",
    "nest-asyncio>=1.6.0",
    "pyzmq>=27.0.1",
    "tornado>=6.5.2",
    "traitlets>=5.14.3",

    # Linters/formatters aligned with configured tools
    "ruff>=0.4.0",
    "pylint>=3.2.0",
    "pycodestyle>=2.11.1",
    "black>=24.4.0",
    "isort>=5.13.0",

    # Versioning helper matching [tool.bumpversion]
    "bump2version>=1.0.1",
]

[tool.setuptools]
packages = ["weac"]
package-data = { "*" = ["CITATION.cff"], "img" = ["*.png"] }

[tool.ruff]
ignore = ["E741"]

[tool.pylint.typecheck]
generated-members = "matplotlib.cm.*"

[tool.pylint.messages_control]
disable = ["C0103"]

[tool.pycodestyle]
ignore = [
    "E121",
    "E123",
    "E126",
    "E211",
    "E226",
    "E24",
    "E704",
    "W503",
    "W504",
    "E741",
]

[tool.bumpversion]
current_version = "2.6.1"
tag = true
commit = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CITATION.cff"

[[tool.bumpversion.files]]
filename = "weac/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "demo/demo.ipynb"

[[tool.bumpversion.files]]
filename = "docs/sphinx/conf.py"
search = "release = '{current_version}'"
replace = "release = '{new_version}'"
