[metadata]
name = weac
version = 2.3.0
author = 2phi GbR
author_email = mail@2phi.de
description = Weak layer anticrack nucleation model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/2phi/weac
project_urls =
	Demo = https://github.com/2phi/weac/blob/main/demo/demo.ipynb
	Documentation = https://2phi.github.io/weac
	Issues and feature requests = https://github.com/2phi/weac/issues
license = Proprietary
license_files = LICENSE
classifiers =
	Programming Language :: Python :: 3
	License :: Other/Proprietary License
	Operating System :: OS Independent
	Topic :: Scientific/Engineering

[options]
packages =
	weac
install_requires =
	matplotlib
	numpy
	scipy

[options.extras_require]
interactive = jupyter

[options.package_data]
* = CITATION.cff
img = *.png

[egg_info]
egg_base = build

[pycodestyle]
ignore = E121, E123, E126, E211, E226, E24, E704, W503, W504, E741
